Started Implmenting The Basick Skeleton

--- a/src/template.html
+++ b/src/template.html
@@ -8,13 +8,13 @@
 </head>
 <body>
    <header>
-        <nav class="navbar">
-            <button class="home" id="home">Home</button>
-            <button class="menu" id="menu">Menu</button>
-            <button class="contact" id="contact">Contact</button>
-        </nav>
    </header>
-   <div id="content">
+   <div id="Container">
+        <div id="ProjectList">
+
+        </div>
+        <div id="TaskList">
+        </div>
     </div>
 </body>
 </html>
