finshing the basic functionality

--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
    </header>
    <div id="Container">
         <div id="ProjectList">
-            <h1>Odin TODOLIST</h1>
+            <h1 id="Today">TODAY</h1>
             <button id="AddProject">Add Project</button>
         </div>
         <div id="TaskList">
