finsihied Basic Functionality Ready for Polisihing

--- a/src/template.html
+++ b/src/template.html
@@ -12,6 +12,7 @@
    <div id="Container">
         <div id="ProjectList">
             <h1 id="Today">TODAY</h1>
+            <h1 id="This Week">This Week</h1>
             <button id="AddProject">Add Project</button>
         </div>
         <div id="TaskList">
