finshied with most of the ui and functionality

--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Montserrat:wght@500&display=swap" rel="stylesheet">
+       <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title>Odin TODLIST App</title>
 </head>
 <body>
@@ -11,9 +11,13 @@
    </header>
    <div id="Container">
         <div id="ProjectList">
-            <h1 id="Today">TODAY</h1>
-            <h1 id="This Week">This Week</h1>
-            <button id="AddProject">Add Project</button>
+            <p id="Today">TODAY</p>
+            <p id="This Week">This Week</p>
+            <div id="ProjectListHeader">
+                <h1 id="Projects">Projects</h1>
+                 <button id="AddProject">Add Project</button>
+            </div>
+            
         </div>
         <div id="TaskList">
         </div>
