finshied the application with all the functionality

--- a/src/template.html
+++ b/src/template.html
@@ -9,6 +9,8 @@
 </head>
 <body>
    <header>
+    <img src="../Image/TODOLIST.png" alt="TODOLIST"/>
+    <h1>TODOLIST APP</h1>
    </header>
    <div id="Container">
         <div id="ProjectList">
